feat(chrome) : userValidation tested and working

--- a/lib/lang/emptyModel.json
+++ b/lib/lang/emptyModel.json
@@ -3,5 +3,9 @@
     "pseudoNeeded": "",
     "tokenSend": "",
     "unknowCommand": "",
-    "validation":""
+    "validation":"",
+    "mp": {
+      "title": "",
+      "sendError": ""
+    }
 }
