wip: working but need chores

--- a/lib/lang/emptyModel.json
+++ b/lib/lang/emptyModel.json
@@ -1,6 +1,6 @@
 {
     "invalidToken": "",
-    "pseudoNeeded": "",
+    "profilNumberNeeded": "",
     "tokenSend": "",
     "unknowCommand": "",
     "validation":"",
